--- a/comparison.ipynb
+++ b/comparison.ipynb
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "b865d314",
    "metadata": {},
    "outputs": [
@@ -270,7 +270,7 @@
     "    basic_eda(conversations)\n",
     "\n",
     "    print(\"\\n=== Initializing Detectors ===\")\n",
-    "    llm_detector = ProfanityLLMDetector(api_key=\"AIzaSyBZw3gTTbu2bcaY2l_5Xg8pPWySY8JcWhU\")\n",
+    "    llm_detector = ProfanityLLMDetector(api_key=API_KEY)\n",
     "    regex_detector = ProfanityRegexDetector()\n",
     "\n",
     "    print(\"\\n=== Running Comparison ===\")\n",
